--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form id="userVowel">
         <input class="form-control" id="vowel" type="text" required>
       </form>
-        
+        <div id="output"></div>
 
 
   </div>
